# pgw

./: .gitmodules  CMakeLists.txt  build_rpm.sh
CMakeModules/: FindRapidJSON.cmake
config/mods-available/: sber
data/: tel-gateway.service
data/etc/: diameter_dictionary.json  gateway_config.json  gateway_config.radius.json  pcc_config.json  session_key_rule.json
data/etc/ip_rules/: 2gis  anydesk  fishing  gosuslugi  kassa.rambler  okko  sber-dns  sber-mobile  sber-online  zvuk
data/etc/radius-dictionary/: dictionary
data/ip_rules/: afisha  alfabank-online  anydesk  fishing  gosuslugi  kuper  ok  okko  samokat  sber-online  skype  zvuk
data/raddb/: gateway_config.json
data/raddb/mods-available/: sber
dependencies/: CMakeLists.txt
dependencies/DiameterPacketConstructor/: CMakeLists.txt
dependencies/DiameterPacketConstructor/docs/: dir_d44c64559bbebec7f509842c48db8b23.html
dependencies/DiameterPacketConstructor/include/Diameter/: AVP.hpp  Packet.hpp
dependencies/async-radius/: CMakeLists.txt
dependencies/gears/: ActiveObject.cpp  ActiveObject.hpp  ActiveObjectCallback.cpp  ActiveObjectCallback.hpp  Allocator.cpp  Allocator.hpp  Allocator.tpp  AppUtils.cpp  AppUtils.hpp  ArrayAutoPtr.hpp  AsciiStringManip.cpp  AsciiStringManip.hpp  AtomicCounter.hpp  BitAlgs.hpp  BoolFunctors.hpp  CMakeLists.txt  CRC.cpp  CRC.hpp  CommonDecimal.cpp  CommonDecimal.hpp  CompositeActiveObject.cpp  CompositeActiveObject.hpp  CompressedSet.hpp  Condition.cpp  Condition.hpp  DelegateActiveObject.hpp  DelegateTaskGoal.hpp  Descriptors.hpp  DirSelector.hpp  Errno.hpp  Exception.hpp  Hash.hpp  HashTable.hpp  HashTableAdapters.hpp  ISAAC.hpp  InputMemoryStream.hpp  InputMemoryStream.tpp  Listener.cpp  Listener.hpp  Lock.hpp  (+60 more)
dependencies/jsoncons/: CMakeLists.txt
docs/: session_keys_dict.txt
raddb/: clients.conf  gateway_config.json  radiusd.conf
raddb/certs/: 01.pem  02.pem  03.pem  04.pem  05.pem  06.pem  dh  index.txt  index.txt.old  user.example@example.org.ecc.pem  user.example@example.org.pem
raddb/mods-config/python/: example.py
raddb/mods-enabled/: client  delay  escape  sber  stats
raddb/sites-enabled/: site
radius/: build-and-install.sh
radius/src/modules/rlm_sber/: all.mk  configure.ac  impl.h  rlm_sber.c
src/: CMakeLists.txt
src/db/: init_db.sh
src/dpi/: AVPUtils.cpp  AVPUtils.hpp  Attribute.hpp  BaseConnection.hpp  CMakeLists.txt  CerrCallback.hpp  Config.cpp  Config.hpp  ConnectionKeeper.cpp  ConnectionKeeper.hpp  DPIPrintUtils.cpp  DPIPrintUtils.hpp  DPIRunner.cpp  DPIRunner.hpp  DPIUtils.cpp  DPIUtils.hpp  DiameterDictionary.cpp  DiameterDictionary.hpp  DiameterEventChecker.cpp  DiameterEventChecker.hpp  DiameterFieldAdapters.cpp  DiameterFieldAdapters.hpp  DiameterPacketFiller.cpp  DiameterPacketFiller.hpp  DiameterPacketUtils.cpp  DiameterPacketUtils.hpp  DiameterPassAttribute.hpp  DiameterSession.cpp  DiameterSession.cpp.fill  DiameterSession.hpp  DummyDiameterSession.cpp  DummyDiameterSession.hpp  EventProcessor.cpp  EventProcessor.hpp  FlowTraits.hpp  FunTask.hpp  IOServiceActiveObject.cpp  IOServiceActiveObject.hpp  InputDiameterRequestProcessor.cpp  InputDiameterRequestProcessor.hpp  (+82 more)
src/dpi_server/: CMakeLists.txt  DPIServer.cpp  NetworkUtils.cpp  PacketProcessor.cpp  PacketProcessor.hpp  ReaderUtil.cpp  ReaderUtil.hpp
src/http_server/: AbortSessionHttpResource.cpp  AbortSessionHttpResource.hpp  CMakeLists.txt  HttpServer.cpp  HttpServer.hpp  SetEventActionHttpResource.cpp  SetEventActionHttpResource.hpp  UpdateSessionHttpResource.cpp  UpdateSessionHttpResource.hpp  UserAddHttpResource.cpp  UserAddHttpResource.hpp  UserBlockHttpResource.cpp  UserBlockHttpResource.hpp  UserGetHttpResource.cpp  UserGetHttpResource.hpp  UserSessionAddHttpResource.cpp  UserSessionAddHttpResource.hpp  UserSessionGetHttpResource.cpp  UserSessionGetHttpResource.hpp  UserSetShapingHttpResource.cpp  UserSetShapingHttpResource.hpp  Utils.cpp  Utils.hpp
src/modules/rlm_sber/: configure.ac  rlm_sber.c  rlm_sber.cpp  rlm_sber.h  rlm_sber.mk
src/net_bridge/: CMakeLists.txt  NetBridge.cpp
src/pgw_server/: CMakeLists.txt  PGWServer.cpp  Processor.cpp  Processor.hpp  RadiusServer.cpp  RadiusServer.hpp  RadiusServerImpl.cpp  RadiusServerImpl.hpp
src/radius/: build-and-install.sh  main.mk
src/radius/share/dictionary/radius/: dictionary.3gpp
src/radius/src/modules/rlm_sber/: configure.ac  rlm_sber.c  rlm_sber.mk
src/radius_module/: AVPUtils.cpp  AVPUtils.hpp  CMakeLists.txt  DiameterSession.cpp  DiameterSession.hpp  Processor.cpp  Processor.hpp  impl.cpp  impl.h
src/radius_server/: CMakeLists.txt  main.cpp  server.cpp
src/stat_uploader/: StatUploader.py
src/swagger/lib/dpi_swagger/: __init__.py  get_user.py  set_user_shaping.py  utils.py
src/tests/: CMakeLists.txt
src/tests/diameter_dictionary_test/: CMakeLists.txt  main.cpp
src/tests/diameter_field_adapter_test/: CMakeLists.txt  main.cpp
src/tests/diameter_packet_filler_test/: CMakeLists.txt  main.cpp
src/tests/fill_user_location_info/: CMakeLists.txt  main.cpp
src/tests/ip_mask_test/: CMakeLists.txt  main.cpp
src/tests/ndpi_processor_test/: CMakeLists.txt  main.cpp
src/tests/packet_parsing_test/: CMakeLists.txt  main.cpp
src/tests/pccconfig_test/: CMakeLists.txt  main.cpp
src/tests/radius_client/: CMakeLists.txt  main.cpp
src/tests/session_key_evaluator_test/: CMakeLists.txt  main.cpp
src/tests/shaping_test/: CMakeLists.txt  main.cpp
src/tests/user_session_test/: CMakeLists.txt  main.cpp
src/tests/user_storage_test/: CMakeLists.txt  main.cpp
src/tests/user_test/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt
src/utils/sendGxUtil/: CMakeLists.txt  SendUtil.cpp
src/utils/sendGyUtil/: CMakeLists.txt  SendUtil.cpp
src/utils/sendUtil/: CMakeLists.txt  SendUtil.cpp
src/utils/sendUtil2/: CMakeLists.txt  SendUtil.cpp
src/utils/udpSend/: udpSend.py
tests/data/: pcc_config.json
tests/radius_flows/: radius_request.txt  send_radius_request.sh
tests/scenarious/: blocking_by_request_test  blocking_by_rule
