set(JSONCONS_BUILD_TESTS OFF CACHE BOOL "Disable jsoncons tests")

set(JSONCONS_CMAKECONFIG_INSTALL_DIR ${INSTALL_PREFIX})
set(CMAKE_INSTALL_INCLUDEDIR_SAVED ${CMAKE_INSTALL_INCLUDEDIR})
set(CMAKE_INSTALL_INCLUDEDIR ${INSTALL_PREFIX})

add_subdirectory(jsoncons)

set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR_SAVED})
