add_library(dpi
  NDPIPacketProcessor.cpp
  DPIPrintUtils.cpp
  DPIUtils.cpp
  Config.cpp
  NetworkUtils.cpp
  PacketProcessor.cpp
  ReaderUtil.cpp
  UserStorage.cpp
  User.cpp
  Logger.cpp
  NetInterfaceProcessor.cpp
  NetInterfaceBridgeNDPIProcessor.cpp
  UserSessionPacketProcessor.cpp
  MainUserSessionPacketProcessor.cpp
  StatUserSessionPacketProcessor.cpp
  IpList.cpp
  EventProcessor.cpp
  ShapingManager.cpp
  PacketProcessingState.cpp
  DiameterSession.cpp
  AVPUtils.cpp
  )

target_link_libraries(dpi
  PRIVATE
    sctp
  PUBLIC
    nDPI
    Gears
    libhttpserver
    jsoncons
    DiameterPacketConstructor
  )

target_include_directories(dpi
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/../
  )
