add_library(dpi
  NDPIPacketProcessor.cpp
  DPIPrintUtils.cpp
  DPIUtils.cpp
  Config.cpp
  NetworkUtils.cpp
  PacketProcessor.cpp
  ReaderUtil.cpp
  UserStorage.cpp
  User.cpp
  Logger.cpp
  NetInterfaceProcessor.cpp
  NetInterfaceBridgeNDPIProcessor.cpp
  UserSessionPacketProcessor.cpp
  MainUserSessionPacketProcessor.cpp
  SessionRuleOverrideUserSessionPacketProcessor.cpp
  StatUserSessionPacketProcessor.cpp
  IpList.cpp
  EventProcessor.cpp
  ShapingManager.cpp
  PacketProcessingState.cpp

  DiameterPacketFiller.cpp
  DiameterSession.cpp
  DummyDiameterSession.cpp

  AVPUtils.cpp
  TrafficRules.cpp
  UserSessionActionPlanner.cpp
  UserSessionStorage.cpp
  PccConfig.cpp
  PccConfigProvider.cpp
  UserSession.cpp
  SCTPConnection.cpp
  ConnectionKeeper.cpp
  DiameterDictionary.cpp
  InputDiameterRequestProcessor.cpp
  Manager.cpp
  IOServiceActiveObject.cpp

  DiameterEventChecker.cpp
  DiameterFieldAdapters.cpp
  RadiusUserSessionPropertyExtractor.cpp
  UserSessionPropertyContainer.cpp
  JsonUtils.cpp
  Value.cpp
  SessionKeyEvaluator.cpp
  ProtocolAdapter.cpp
  OctetStats.cpp
  )

target_link_libraries(dpi
  PRIVATE
    sctp
  PUBLIC
    radproto
    nDPI
    Gears
    libhttpserver
    jsoncons
    DiameterPacketConstructor
  )

target_include_directories(dpi
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/../
  )
