add_subdirectory(packet_parsing_test)
add_subdirectory(user_storage_test)
add_subdirectory(user_test)
add_subdirectory(shaping_test)
add_subdirectory(ndpi_processor_test)
add_subdirectory(pccconfig_test)
add_subdirectory(user_session_test)
#add_subdirectory(fill_user_location_info)
add_subdirectory(diameter_dictionary_test)
